--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: calculadoraimc
-description: A new Flutter project.
+description: Learning state management.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  syncfusion_flutter_gauges: ^22.1.36
+  currency_text_input_formatter: ^2.1.10
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
